--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "request": "^2.88.2"
   }
 }
